2004-05-13  Simon Marshall <simon.marshall@misys.com> 	    Benjamin Kosnik  <bkoz@redhat.com>

PR libstdc++/15090
	* include/bits/locale_facets.h: Fix for -fno-for-scope.
	* include/debug/safe_sequence.h: Same.
	* include/debug/safe_iterator.tcc: Same.
	* src/debug.cc: Same.
	* src/locale.cc: Same.
	* src/locale_init.cc: Same.
	* src/localename.cc: Same.
	* config/locale/gnu/ctype_members.cc: Same.
	* config/locale/gnu/numeric_members.cc: Same.
	* testsuite/testsuite_abi.cc: Same.
	* testsuite/testsuite_hooks.cc: Same.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@81795 138bc75d-0d04-0410-961f-82ee72b054a4